macro/tests/fail/id_already_defined.stderr
error: custom attribute panicked
 --> $DIR/id_already_defined.rs:3:1
  |
3 | #[parameterized(v = {1, 2, 3}, v = { 1 })]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Duplicate identifier found. Please use unique parameter names.
